# x-trading

./: pyproject.toml
tests/: test_pp.py  test_vp.py  test_x.py
x_trading/: __init__.py  conf.py  pp.py  vp.py  x.py
x_trading/_pp/: __init__.py  pivot.py
