[tool.poetry]
name = "x-trading"
version = "0.1.0"
description = "Comandos úteis para o trading"
authors = ["Valmir Franca <vfranca3@gmail.com>"]
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/vfranca/x-trading"
keywords = ["CLI", "trading"]
packages = [{include = "x_trading"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
x = "x_trading.x:x"
